--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,20 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
+body{
+	background-color: #1C1C1C;
+}
 .container{
-	margin-top: 1%;
-	margin-bottom: 1%;
+	box-shadow: 0px 0px 22px 0px rgba(255,255,255,1);
+}
+
+.header-section, .footer-section{
+	background: linear-gradient(to bottom right, #001733, #5DA6FF);
+	color:white;
+}
+
+.main-section{
+	background-color: #FFFFFF;
+	color:black;
 }
 
 h1{
@@ -19,6 +33,9 @@ h4{
 	font-size: 1.2em;	
 }
 
+p{
+	font-family: 'Lato', sans-serif;
+}
 .profile-pic{
 	border-radius: 50%;
 }
