--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body{
 .main-section{
 	background-color: #FFFFFF;
 	color:black;
+	overflow: hidden;
 }
 
 h1{
@@ -35,7 +36,14 @@ h4{
 
 p{
 	font-family: 'Lato', sans-serif;
+	font-size: 1.05em;
 }
 .profile-pic{
 	border-radius: 50%;
+}
+.dates{
+	text-align: right;
+}
+.interests{
+	margin-left:15%;
 }
