--- a/css/media_queries.css
+++ b/css/media_queries.css
@@ -4,3 +4,18 @@
 		margin-right: 2%;		
 	}	
 }
+
+@media screen and (min-width: 768px){
+	.dates{
+		text-align: right;
+	}
+	.interests{
+		margin-left:15%;
+	}
+}
+
+@media screen and (max-width: 768px){
+	p, h1, h2, h3, h4{
+		text-align: center;
+	}
+}
