--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,12 @@ p{
 	font-family: 'Lato', sans-serif;
 	font-size: 1.05em;
 }
+
+.link-header{
+	color:white;
+	text-decoration: underline;
+}
+
 .profile-pic{
 	border-radius: 50%;
 }
