--- a/css/main.css
+++ b/css/main.css
@@ -1,54 +1,69 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
 body{
-	background-color: #1C1C1C;
+	background-color: #FAFAFA;
 }
 .container{
-	box-shadow: 0px 0px 22px 0px rgba(255,255,255,1);
+	margin: 0 auto;
 }
 
 .header-section, .footer-section{
-	background: linear-gradient(to bottom right, #001733, #5DA6FF);
+	background-color:#333333;
 	color:white;
 }
 
 .main-section{
-	background-color: #FFFFFF;
+	background-color: #FEFEFE;
 	color:black;
 	overflow: hidden;
 }
+.contact-section{
+	overflow: hidden;
+	background-color: #FEFEFE;
+	color:black;
+	text-align: center;
+	margin-bottom: 0 !important;
+}
+.contact-section li{
+	display: inline;
+}
 
 h1{
-	font-size: 2em;
+	font-size: 1.8em;
 }
 
 h2{
-	font-size: 1.5em;	
+	font-size: 1.3em;	
 }
 
 h3{
-	font-size: 1.3em;
-	font-style: italic;
+	font-size: 1.1em;
+	font-weight: bold;
 }
 
 h4{
-	font-size: 1.2em;	
-	font-style: italic;
+	font-size: 1.05em;	
+	font-weight: bold;
 }
 
 p{
 	font-family: 'Lato', sans-serif;
-	font-size: 1.05em;
+	font-size: 1em;
 }
 
+hr{
+	background-color: gray;
+	height: 1px;
+
+}
+.lines{
+	overflow: hidden;
+	background-color: #FEFEFE; 
+}
 .link-header{
-	color:white;
 	text-decoration: underline;
 }
 
 .profile-pic{
 	border-radius: 50%;
-}
-.dates h3{
-	font-weight: bold;
 }
